<resources>
    <string name="app_name">NotificationDemo</string>
    <string name="channel_name">NotificationDemo_channel_name</string>
    <string name="channel_description">NotificationDemo_channel_description</string>
    <string name="send_basic_notification">send basic notification</string>
    <string name="send_basic_bycompat_notification">send notification by compat</string>
    <string name="send_bigpicturestyle_notification">send bigpicturestyle notification</string>
    <string name="setstyle_channel_name">setstyle channel name</string>
    <string name="setstyle_channel_description">setsytle channel description</string>
    <string name="send_bigtextstyle_notification">send bigtextstyle notification</string>
    <string name="send_inboxstyle_notification">send inboxstyle notification</string>
    <string name="send_messagingstyle_notification">send messagingstyle notification</string>
    <string name="send_mediastyle_notification">send mediastyle notification</string>
    <string name="send_tap_notification">send tap notification</string>
    <string name="tap_notification_name">tap notification name</string>
    <string name="tap_notification_description">tap notification description</string>
    <string name="send_button_notification">send notification with button</string>
    <string name="category_alarm_notification">category alarm notification</string>
    <string name="category_message_notification">category message notification</string>
    <string name="send_visibility_secret_notification">visibility secret notification</string>
    <string name="basic_notification">basic notification</string>
    <string name="setstyle_notification">set style notification</string>
    <string name="tap_notification">tap notification</string>
    <string name="button_notification">button notification</string>
    <string name="category_notification">category notification</string>
    <string name="visibility_notification">visibility notification</string>
    <string name="send_visibility_private_notification">visibility private notification</string>
    <string name="send_visibility_public_notification">visibility public notification</string>
    <string name="update_basic_notification">update basic notification</string>
    <string name="send_alert_once_notification">alert once notification</string>
    <string name="update_alert_once_notification">update alert once notification</string>
    <string name="cancel_basic_notification">cancel basic notification</string>
    <string name="cancel_all_notification">cancel all notification</string>
    <string name="send_timeout_notification">send timeout notification</string>
    <string name="group_notification">group notification</string>
    <string name="send_four_notification">send four notification</string>
    <string name="send_two_same_group_notification">send two same group notification</string>
</resources>
