<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:id="@+id/bigpicturestyle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_bigpicturestyle_notification"/>
    <Button
        android:id="@+id/bigtextstyle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_bigtextstyle_notification"/>
    <Button
        android:id="@+id/inboxstyle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_inboxstyle_notification"/>
    <Button
        android:id="@+id/messagingstyle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_messagingstyle_notification"/>
    <Button
        android:id="@+id/mediastyle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_mediastyle_notification"/>

</LinearLayout>